scores by school type

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cca42e09",
+   "id": "857c914c",
    "metadata": {
     "collapsed": true
    },
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0e99676d",
+   "id": "f906d683",
    "metadata": {
     "collapsed": true
    },
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8754052b",
+   "id": "27f74c40",
    "metadata": {
     "collapsed": true
    },
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "af66852c",
+   "id": "7dec5b58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1c04df9a",
+   "id": "bd53fc02",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ae31e82f",
+   "id": "3be00553",
    "metadata": {
     "collapsed": true
    },
@@ -2315,7 +2315,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4bb18452",
+   "id": "430c9451",
    "metadata": {
     "collapsed": true
    },
@@ -2500,7 +2500,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7a22bbbc",
+   "id": "36e35f34",
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ca1f2d20",
+   "id": "fc429b5e",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9c970e03",
+   "id": "0292feb1",
    "metadata": {},
    "outputs": [
     {
@@ -2688,7 +2688,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ffa52074",
+   "id": "05724277",
    "metadata": {},
    "outputs": [
     {
@@ -2710,7 +2710,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f3802a21",
+   "id": "f33a796f",
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2733,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "146488ac",
+   "id": "798c74a1",
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2756,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4b23dbb8",
+   "id": "4e92bdf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2767,7 +2767,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "855834d7",
+   "id": "fb26caea",
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "73742b39",
+   "id": "675aa404",
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a63c9774",
+   "id": "c3f52ef1",
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2841,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e64d0b6d",
+   "id": "8dc896f7",
    "metadata": {},
    "outputs": [
     {
@@ -2863,7 +2863,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e6de85e8",
+   "id": "01ca79e9",
    "metadata": {},
    "outputs": [
     {
@@ -2943,7 +2943,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "32695d69",
+   "id": "92d5b41c",
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +2968,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "acb90221",
+   "id": "aed96ac7",
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "49f02f47",
+   "id": "7d1ee22b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3013,7 +3013,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "ae87303d",
+   "id": "4ffd9e6c",
    "metadata": {},
    "outputs": [
     {
@@ -3083,7 +3083,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "11f9da1c",
+   "id": "09cff51f",
    "metadata": {},
    "outputs": [
     {
@@ -3184,7 +3184,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "d17c553c",
+   "id": "fcd7f2a0",
    "metadata": {},
    "outputs": [
     {
@@ -3223,7 +3223,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9c8a4782",
+   "id": "42485d6e",
    "metadata": {},
    "outputs": [
     {
@@ -3353,7 +3353,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "dcc61c98",
+   "id": "71479cb8",
    "metadata": {
     "collapsed": true
    },
@@ -3393,7 +3393,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "c06d9711",
+   "id": "af87f493",
    "metadata": {
     "collapsed": true
    },
@@ -3434,7 +3434,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4d7cae91",
+   "id": "35e40e97",
    "metadata": {
     "collapsed": true
    },
@@ -3474,7 +3474,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "1c0c58c6",
+   "id": "84efa0a8",
    "metadata": {
     "collapsed": true
    },
@@ -3515,7 +3515,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e7179922",
+   "id": "42c8f110",
    "metadata": {
     "collapsed": true
    },
@@ -3555,7 +3555,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e1f7cada",
+   "id": "6eb369cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3566,7 +3566,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "9e1d0211",
+   "id": "8350ddf2",
    "metadata": {},
    "outputs": [
     {
@@ -3799,7 +3799,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "15c2bacf",
+   "id": "83b08021",
    "metadata": {},
    "outputs": [
     {
@@ -3839,7 +3839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1098cc49",
+   "id": "51d5b0c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3852,7 +3852,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f9f343e3",
+   "id": "d781786e",
    "metadata": {},
    "outputs": [
     {
@@ -3898,7 +3898,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "74d00d69",
+   "id": "e3ec612d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3911,7 +3911,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "27c80c59",
+   "id": "5a458097",
    "metadata": {},
    "outputs": [
     {
@@ -4054,7 +4054,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a88e4507",
+   "id": "0f06d9d7",
    "metadata": {},
    "outputs": [
     {
@@ -4088,7 +4088,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "6be03845",
+   "id": "55e30e8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4099,7 +4099,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "fed5d297",
+   "id": "557c6d63",
    "metadata": {},
    "outputs": [
     {
@@ -4135,7 +4135,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "2dd38a9a",
+   "id": "14dbf68a",
    "metadata": {},
    "outputs": [
     {
@@ -4289,7 +4289,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "98e4db4d",
+   "id": "b3382e0c",
    "metadata": {},
    "outputs": [
     {
@@ -4438,7 +4438,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8b02130f",
+   "id": "65a81866",
    "metadata": {},
    "outputs": [
     {
@@ -4583,7 +4583,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d8ba285e",
+   "id": "0f1c38a3",
    "metadata": {},
    "outputs": [
     {
@@ -4728,7 +4728,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "6dec6f8d",
+   "id": "9df212ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4745,7 +4745,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "23324175",
+   "id": "41d184b8",
    "metadata": {},
    "outputs": [
     {
@@ -4789,7 +4789,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1b9c0ba6",
+   "id": "151a4153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4806,7 +4806,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "eb5ceda9",
+   "id": "77b0f11c",
    "metadata": {},
    "outputs": [
     {
@@ -4912,7 +4912,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "0af9f0e4",
+   "id": "66c28eab",
    "metadata": {},
    "outputs": [
     {
@@ -5018,7 +5018,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "3dba9e59",
+   "id": "ea5ea53f",
    "metadata": {},
    "outputs": [
     {
@@ -5125,7 +5125,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "0ab5fe84",
+   "id": "150fe182",
    "metadata": {},
    "outputs": [
     {
@@ -5232,7 +5232,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6e21ddd4",
+   "id": "158fdd32",
    "metadata": {},
    "outputs": [
     {
@@ -5262,7 +5262,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d3eaaf44",
+   "id": "d5a74a08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5274,7 +5274,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "d5031288",
+   "id": "ba9e83f0",
    "metadata": {
     "scrolled": true
    },
@@ -5614,7 +5614,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ea36a474",
+   "id": "2bb430b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5633,7 +5633,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "9e3f08d5",
+   "id": "dc3ea9a1",
    "metadata": {},
    "outputs": [
     {
@@ -5752,7 +5752,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "098f47da",
+   "id": "3322b6c9",
    "metadata": {},
    "outputs": [
     {
@@ -5874,7 +5874,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "bbd0697d",
+   "id": "fba42adb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5886,7 +5886,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "bf51d7b8",
+   "id": "5cc87281",
    "metadata": {},
    "outputs": [
     {
@@ -6050,7 +6050,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "0c8ec777",
+   "id": "9f087908",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6069,7 +6069,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "a69d4655",
+   "id": "cd29172d",
    "metadata": {},
    "outputs": [
     {
@@ -6171,7 +6171,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "43663900",
+   "id": "1f904b04",
    "metadata": {},
    "outputs": [
     {
@@ -6275,8 +6275,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "7ba0b212",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "bded6b47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "40867aae",
+   "id": "09035282",
    "metadata": {},
    "outputs": [],
    "source": []
