Adding Challenge code

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "857c914c",
+   "id": "41100f1f",
    "metadata": {
     "collapsed": true
    },
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f906d683",
+   "id": "4bd0067b",
    "metadata": {
     "collapsed": true
    },
@@ -1220,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "27f74c40",
+   "id": "573f3b6e",
    "metadata": {
     "collapsed": true
    },
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7dec5b58",
+   "id": "dba8530b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bd53fc02",
+   "id": "cf8f4fad",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3be00553",
+   "id": "e49f2722",
    "metadata": {
     "collapsed": true
    },
@@ -2315,7 +2315,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "430c9451",
+   "id": "b631b127",
    "metadata": {
     "collapsed": true
    },
@@ -2500,7 +2500,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "36e35f34",
+   "id": "70e69578",
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fc429b5e",
+   "id": "d1a3e7df",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0292feb1",
+   "id": "70ca9249",
    "metadata": {},
    "outputs": [
     {
@@ -2688,7 +2688,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "05724277",
+   "id": "d6fd47ce",
    "metadata": {},
    "outputs": [
     {
@@ -2710,7 +2710,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f33a796f",
+   "id": "a177a549",
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2733,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "798c74a1",
+   "id": "73f35556",
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2756,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4e92bdf1",
+   "id": "73e6fe4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2767,7 +2767,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fb26caea",
+   "id": "f1a8fae6",
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2793,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "675aa404",
+   "id": "175d59eb",
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c3f52ef1",
+   "id": "d39e3a50",
    "metadata": {},
    "outputs": [
     {
@@ -2841,7 +2841,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8dc896f7",
+   "id": "e01f1d92",
    "metadata": {},
    "outputs": [
     {
@@ -2863,7 +2863,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "01ca79e9",
+   "id": "4e4a2fcf",
    "metadata": {},
    "outputs": [
     {
@@ -2943,7 +2943,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "92d5b41c",
+   "id": "ed86de94",
    "metadata": {},
    "outputs": [
     {
@@ -2968,7 +2968,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "aed96ac7",
+   "id": "e0ad95ba",
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7d1ee22b",
+   "id": "d2d27b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3013,7 +3013,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "4ffd9e6c",
+   "id": "aa6cb4c3",
    "metadata": {},
    "outputs": [
     {
@@ -3083,7 +3083,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "09cff51f",
+   "id": "0ff260b2",
    "metadata": {},
    "outputs": [
     {
@@ -3184,7 +3184,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "fcd7f2a0",
+   "id": "c07761fc",
    "metadata": {},
    "outputs": [
     {
@@ -3223,7 +3223,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "42485d6e",
+   "id": "7625d7e0",
    "metadata": {},
    "outputs": [
     {
@@ -3353,7 +3353,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "71479cb8",
+   "id": "b9d39da6",
    "metadata": {
     "collapsed": true
    },
@@ -3393,7 +3393,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "af87f493",
+   "id": "1dafb736",
    "metadata": {
     "collapsed": true
    },
@@ -3434,7 +3434,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "35e40e97",
+   "id": "b46a355e",
    "metadata": {
     "collapsed": true
    },
@@ -3474,7 +3474,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "84efa0a8",
+   "id": "3165c5b9",
    "metadata": {
     "collapsed": true
    },
@@ -3515,7 +3515,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "42c8f110",
+   "id": "5fb33365",
    "metadata": {
     "collapsed": true
    },
@@ -3555,7 +3555,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "6eb369cf",
+   "id": "bf8b9b46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3566,7 +3566,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8350ddf2",
+   "id": "42e23d90",
    "metadata": {},
    "outputs": [
     {
@@ -3799,7 +3799,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "83b08021",
+   "id": "a57f2683",
    "metadata": {},
    "outputs": [
     {
@@ -3839,7 +3839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51d5b0c0",
+   "id": "3a932301",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3852,7 +3852,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "d781786e",
+   "id": "0b644b3d",
    "metadata": {},
    "outputs": [
     {
@@ -3898,7 +3898,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e3ec612d",
+   "id": "2f83b029",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3911,7 +3911,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5a458097",
+   "id": "2790a042",
    "metadata": {},
    "outputs": [
     {
@@ -4054,7 +4054,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "0f06d9d7",
+   "id": "dd2209e0",
    "metadata": {},
    "outputs": [
     {
@@ -4088,7 +4088,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "55e30e8b",
+   "id": "fda8eaa9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4099,7 +4099,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "557c6d63",
+   "id": "6fd22521",
    "metadata": {},
    "outputs": [
     {
@@ -4135,7 +4135,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "14dbf68a",
+   "id": "1726892d",
    "metadata": {},
    "outputs": [
     {
@@ -4289,7 +4289,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b3382e0c",
+   "id": "c6c2aa7b",
    "metadata": {},
    "outputs": [
     {
@@ -4438,7 +4438,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "65a81866",
+   "id": "8e85d534",
    "metadata": {},
    "outputs": [
     {
@@ -4583,7 +4583,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "0f1c38a3",
+   "id": "c5aba0cf",
    "metadata": {},
    "outputs": [
     {
@@ -4728,7 +4728,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9df212ae",
+   "id": "810e620e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4745,7 +4745,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "41d184b8",
+   "id": "590694e5",
    "metadata": {},
    "outputs": [
     {
@@ -4789,7 +4789,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "151a4153",
+   "id": "03ed8774",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4806,7 +4806,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "77b0f11c",
+   "id": "78e3a161",
    "metadata": {},
    "outputs": [
     {
@@ -4912,7 +4912,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "66c28eab",
+   "id": "cd7e1527",
    "metadata": {},
    "outputs": [
     {
@@ -5018,7 +5018,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "ea5ea53f",
+   "id": "3197e06b",
    "metadata": {},
    "outputs": [
     {
@@ -5125,7 +5125,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "150fe182",
+   "id": "82493550",
    "metadata": {},
    "outputs": [
     {
@@ -5232,7 +5232,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "158fdd32",
+   "id": "ffd7b5f8",
    "metadata": {},
    "outputs": [
     {
@@ -5262,7 +5262,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "d5a74a08",
+   "id": "0285d0a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5274,7 +5274,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "ba9e83f0",
+   "id": "60d0d70b",
    "metadata": {
     "scrolled": true
    },
@@ -5614,7 +5614,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "2bb430b8",
+   "id": "68411792",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5633,7 +5633,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "dc3ea9a1",
+   "id": "44572d31",
    "metadata": {},
    "outputs": [
     {
@@ -5752,7 +5752,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "3322b6c9",
+   "id": "3f5a7a5e",
    "metadata": {},
    "outputs": [
     {
@@ -5874,7 +5874,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "fba42adb",
+   "id": "dbaf5ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5886,7 +5886,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "5cc87281",
+   "id": "69bd31b9",
    "metadata": {},
    "outputs": [
     {
@@ -6050,7 +6050,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "9f087908",
+   "id": "57092660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6069,7 +6069,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "cd29172d",
+   "id": "1de142f9",
    "metadata": {},
    "outputs": [
     {
@@ -6171,7 +6171,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "1f904b04",
+   "id": "a38d2ca8",
    "metadata": {},
    "outputs": [
     {
@@ -6276,7 +6276,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "7ba0b212",
+   "id": "7b9a7797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6295,7 +6295,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "bded6b47",
+   "id": "3f53f92f",
    "metadata": {},
    "outputs": [
     {
@@ -6386,8 +6386,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "id": "ad0ddbf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "09035282",
+   "id": "bf380851",
    "metadata": {},
    "outputs": [],
    "source": []
